# axum-nextjs-auth

./: .env  README.MD
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: next.config.ts  package-lock.json  package.json
frontend/api/session/: route.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/signin/: page.tsx
frontend/components/auth/: Login1.tsx
frontend/components/ui/: GlowText.tsx
src/: main.rs
