[package]
name = "axum-google-oauth"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.7.5", features = ["json"]} 
axum-extra = { version = "0.9.3", features = ["cookie-private"] } 
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] } 
serde_json = "1.0.117"
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls"] }
oauth2 = "4.4.1"
url = { version = "2.5.0", features = ["serde"] }
tower-http = { version = "0.5.2", features = ["trace", "fs", "cors", "auth"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rand = "0.8.5"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
async-session = "3.0.0"
time = "0.3"
dashmap = "5.4.0"
jsonwebtoken = "0.49"
